--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "quick-ts-start",
-  "version": "1.0.0",
+  "name": "admin-react-scripts-ts",
+  "version": "2.0.0",
   "license": "MIT",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
